--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "simulator",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "linebyline": "^1.3.0"
+  }
 }
